# EarPlayer

./: CHANGELOG.md  CONTRIBUTING.md
.github/workflows/: release.yml
ear-trainer/: Cargo.toml  PROJECT_SUMMARY.md  README.md
ear-trainer/src/: config.rs  main.rs  storage.rs
ear-trainer/src/audio/: backend.rs  ble_midi.rs  manager.rs  midi.rs  mod.rs  synth.rs
ear-trainer/src/music/: bass.rs  bricks.rs  chord.rs  drums.rs  joins.rs  mod.rs  progression.rs  rhythm.rs  scale.rs  standards.rs  theory.rs  voicings.rs
ear-trainer/src/ui/: app.rs  controls.rs  enhanced_piano_roll.rs  horizontal_keyboard.rs  lego_mode.rs  mod.rs  notation.rs  piano_roll.rs  symbols.rs  timeline.rs
prompts/completed/: 001-terminal-music-ear-trainer.md
scripts/: release.sh  trigger-release.sh
