[package]
name = "ear-trainer"
version = "0.5.0"
edition = "2021"
description = "Terminal-based music ear training application"
repository = "https://github.com/doobidoo/EarPlayer"
license = "MIT"
keywords = ["music", "ear-training", "midi", "terminal", "tui"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
midir = "0.9"
rodio = "0.17"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
